--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch data/cities.json --port 9000"
+    "server": "json-server --watch data/cities.json --port 9000",
+    "jsdoc": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
+    "jsdoc": "^4.0.2",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
